css/style.css
/* RESET */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

img {
  max-width: 100%;
}

body {
  font-size: 13px;
  font-family: "Roboto", sans-serif;
  /* color: #393939; */
}

/* GENERICS */

.container-big {
  margin: 0 auto;
  width: 60vw;
  height: 100%;
}

.container-small {
  margin: 0 auto;
  width: 52vw;
}

.button-blu {
  background-color: #0061ff;
  color: #cde1ff;
  padding: 5px 12px;
  border: 0;
}
ul {
  list-style-type: none;
}

h2 {
  font-size: 2rem;
  margin-bottom: 35px;
}
h3 {
  font-size: 1.3rem;
}
h4 {
  margin-top: 15px;
  margin-bottom: 40px;
}

.mid-title {
  margin-bottom: 15px;
}
.mid-text {
  margin-bottom: 20px;
}

button:hover {
  filter: opacity(0.8);
}
/* HEADER */

.nav {
  width: 100%;
  height: 50px;
  padding: 15px 15px;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.nav-left {
  display: flex;
  align-items: center;
}
.nav-left > img {
  height: 20px;
  display: inline-block;
}

.nav ul {
  display: inline-block;
}
.nav li {
  display: inline-block;
  margin: 0 15px;
  height: 50px;
  line-height: 50px;
}

.nav li a {
  text-decoration: none;
  color: #393939;
}

.nav-right ul li .button-blu {
  margin-left: 15px;
  margin-right: -15px;
}
.nav li:hover {
  box-shadow: 0 2px 0 0 #000000;
}
.jumbo {
  padding-top: 70px;
  background-color: #b4d0e7;
  height: 100%;
}
h1 {
  font-size: 4rem;
  font-weight: 900;
}

.jumbo-section {
  display: flex;
}

.jumbo-left {
  width: 30%;
  line-height: 17px;
  margin-top: 55px;
  position: relative;
}

.jumbo-left > .button-blu {
  margin: 20px 0;
  display: block;
  padding: 10px 12px;
}
.freccia {
  position: absolute;
  bottom: 15px;
  font-size: 40px;
}

.jumbo-right {
  width: 70%;
  position: relative;
  top: 55px;
}

/* MAIN */

.fatturazione {
  margin-top: 100px;
  height: 100%;
}

.fatturazione label {
  margin: 0 20px 0 5px;
}

/* PIANI */

.piani > .container-small {
  display: flex;
  justify-content: space-between;
  gap: 30px;
}

.box-prezzo {
  width: 33%;
  border: 1px solid #e5e5e6;
  margin: 30px 0;
}

.target {
  line-height: 30px;
  vertical-align: middle;
  text-align: center;
  border: 1px solid #e5e5e6;
}
.box-prezzo-info {
  padding: 20px 20px 0 20px;
}
.box-prezzo-info li {
  padding: 10px 0;
}
.box-prezzo-info .box-title li:last-child {
  color: grey;
}
.box-prezzo-info .box-title li:nth-child(2) {
  font-weight: bold;
}

.description {
  display: flex;
  flex-wrap: wrap;
  align-content: flex-start;
  min-height: 250px;
}

.text {
  width: 90%;
}
.small-icon {
  width: 10%;
}
.small-icon,
.text {
  margin-bottom: 20px;
}

.box-prezzo-info .button-blu {
  width: 100%;
  padding: 10px 0px;
  margin-bottom: 30px;
}

.hr-main {
  margin: 30px 0px 40px 0;
  width: 40px;
  color: #e5e5e6;
}

.box-flex {
  width: 100%;
  min-height: 200px;
  margin-bottom: 20px;
}

.box-flex .box-prezzo-info {
  border-left: 1px solid #e5e5e6;
  border-right: 1px solid #e5e5e6;
  border-bottom: 1px solid #e5e5e6;
  display: flex;
}

.partner .box-flex {
  display: flex;
}

.col-70 {
  width: 70%;
  margin-bottom: 15px;
}
.col-30 {
  width: 30%;
}
.col-60 {
  width: 60%;
}
.col-40 {
  width: 40%;
}
.partner .col-40 {
  padding: 50px 15px 0 30px;
}
.partner button {
  background-color: white;
  color: #606262;
  border: 1px solid black;
  padding: 7px 14px;
  box-shadow: 0px 0px 4px 0px;
}

/* FEATURES */

.feature,
.business {
  margin: 80px auto 100px auto;
}
.feature .box-flex {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.business {
  padding-right: 12rem;
}

/* SEZIONE QUADRATI */

.col-50 {
  width: 50%;
  height: calc(100vw / 6);
  display: flex;
  justify-content: center;
  align-items: center;
}

.client-logo {
  display: flex;
  flex-wrap: wrap;
}

.client-logo-left,
.client-logo-middle,
.client-logo-right {
  width: calc(100% / 3);
  height: calc(100vw / 3);
}

.client-logo-middle {
  background-color: whitesmoke;
  padding: 40px 40px 0 40px;
}
.quotes {
  quotes: "'";
  margin-bottom: 40px;
}
.client-logo-left,
.client-logo-right {
  background-color: #393939;
  display: flex;
  flex-wrap: wrap;
}
.client-logo-left > .col-50 > img,
.client-logo-right > .col-50 > img {
  filter: invert(1);
  width: 130px;
}
.client-logo-middle img {
  width: 170px;
}
.client-logo-left div:first-child {
  background-color: #a2d39b;
  border: 10px solid #d1e9cd;
}
.client-logo-left div:nth-child(2) {
  background-color: #61082b;
}
.client-logo-left div:nth-child(3) {
  background-color: #0093ce;
}
.client-logo-left div:last-child {
  background-color: #ff1c1c;
}
.client-logo-right div:first-child {
  background-color: #d5001f;
}
.client-logo-right div:nth-child(2) {
  background-color: #b4d0e7;
}
.client-logo-right div:nth-child(3) {
  background-color: #0d2481;
}
.client-logo-right div:last-child {
  background-color: #ffd830;
}
/* FREE TRIAL */
.free-trial {
  background-color: #b4d0e7;
}

.free-trial .container-small {
  display: flex;
  justify-content: space-between;
  gap: 50px;
  padding: 80px 0;
}

.free-trial h2 {
  color: #610629;
}

.free-trial .col-40 button {
  width: 80%;
  border: 0;
  background-color: white;
  padding: 10px 0;
}

/* FAQ */
.faq {
  margin: 100px auto;
}
.box-domande {
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 70px;
  border-top: 2px solid #e5e5e6;
  padding-top: 5px;
}
.faq .box-domande:last-child {
  border-bottom: 2px solid #e5e5e6;
}
.arrow {
  flex-basis: 40px;
  text-align: center;
}

.domanda {
  font-weight: bold;
}

.tendina {
  display: none;
  font-weight: normal;
  margin: 25px 0;
}
.domanda:hover .tendina {
  display: inline-block;
}
/* FOOTER */

.footer {
  padding: 70px 0 40px 0;
  background-color: black;
  min-height: 350px;
  color: rgb(177, 177, 177);
}
.footer-wrapper {
  display: flex;
}

.col-20 {
  width: 20%;
}

.footer li {
  padding-bottom: 15px;
}
.footer .mid-title {
  color: white;
}

.footer ul {
  margin-top: 25px;
}

.footer .hr-main {
  width: 70px;
}

